# fg-sra

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: ci.yml  publish.yml
crates/fg-sra/: CHANGELOG.md  Cargo.toml
crates/fg-sra-vdb/: CHANGELOG.md  Cargo.toml
crates/fg-sra-vdb-sys/: CHANGELOG.md  Cargo.toml  build.rs  wrapper.h
crates/fg-sra-vdb/src/: cursor.rs  database.rs  dependencies.rs  error.rs  iterator.rs  lib.rs  manager.rs  reference.rs  retry.rs
crates/fg-sra-vdb/tests/: vdb_integration.rs
crates/fg-sra/src/: aligned.rs  cli.rs  header.rs  main.rs  output.rs  progress.rs  record.rs  unaligned.rs
crates/fg-sratosam/: Cargo.toml
crates/fg-sratosam/src/: aligned.rs  cli.rs  header.rs  main.rs  matecache.rs  output.rs  record.rs  unaligned.rs
scripts/: install-hooks  install-hooks.sh  pre-commit
scripts/hooks/: pre-commit
