[workspace]
resolver = "2"
members = [
    "crates/fg-sra-vdb-sys",
    "crates/fg-sra-vdb",
    "crates/fg-sra",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/fulcrumgenomics/fg-sra"
license = "MIT"

[workspace.dependencies]
fg-sra-vdb-sys = { version = "0.1.0", path = "crates/fg-sra-vdb-sys", default-features = false }
fg-sra-vdb = { version = "0.1.0", path = "crates/fg-sra-vdb", default-features = false }
anyhow = "1"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
# Allow specific pedantic lints that are too noisy for this codebase.
# FFI and BAM binary encoding require pervasive integer casts that are
# correct by construction but trigger pedantic cast warnings.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
