[package]
name = "fg-sra-vdb-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Raw FFI bindings to NCBI's libncbi-vdb C library"
readme = "../../README.md"
links = "ncbi-vdb"

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"
