[package]
name = "fg-sra-vdb-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Raw FFI bindings to NCBI's libncbi-vdb C library"
readme = "../../README.md"
links = "ncbi-vdb"

# Opt out of workspace pedantic lints — this crate is generated FFI bindings
# and a build script, neither of which should be held to pedantic standards.
[lints.clippy]
pedantic = { level = "allow", priority = -1 }

[features]
# Build ncbi-vdb from the vendored git submodule (vendor/ncbi-vdb).
# Without this feature, VDB_INCDIR and VDB_LIBDIR env vars must be set
# to point at a pre-built ncbi-vdb installation.
vendored = ["dep:cmake"]

[build-dependencies]
bindgen = "0.72"
cmake = { version = "0.1", optional = true }
