[package]
name = "fg-sra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "High-performance SRA-to-SAM/BAM converter replacing NCBI sam-dump"
authors = ["Nils Homer <nils@fulcrumgenomics.com>"]
homepage = "https://github.com/fg-labs/fg-sra"
categories = ["command-line-utilities", "science"]
keywords = ["bioinformatics", "sra", "sam", "bam", "ngs"]
readme = "../../README.md"

[lints]
workspace = true

[features]
default = ["vendored"]
vendored = ["fg-sra-vdb/vendored"]

[dependencies]
fg-sra-vdb.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
itoa = "1"
flate2 = "1"
bzip2 = "0.6"
noodles-bam = "0.88"
noodles-bgzf = "0.46"
noodles-sam = "0.84"
rustc-hash = "2"
